--- a/robby.html
+++ b/robby.html
@@ -20,7 +20,24 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_fast_sparse_period_est_2014">1</a>]
+[<a name="Haley_gns_4spaper2014">1</a>]
+</td>
+<td class="bibtexitem">
+D.&nbsp;Haley, A.&nbsp;Grant, W.&nbsp;Cowley, L.&nbsp;Davis, I.&nbsp;Land, M.&nbsp;Lavenant, G.&nbsp;Lechner,
+  R.&nbsp;McKilliam, and A.&nbsp;Pollok.
+ Enabling technologies for a microsatellite-based global sensor
+  network.
+ In <em>Small Satellites Systems and Services Symposium</em>, Majorca,
+  Spain, May 2014.
+[&nbsp;<a href="robby_bib.html#Haley_gns_4spaper2014">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_fast_sparse_period_est_2014">2</a>]
 </td>
 <td class="bibtexitem">
 R.G. McKilliam, I.&nbsp;V.L. Clarkson, and B.G. Quinn.
@@ -38,7 +55,7 @@ Keywords: Chirp;Estimation;Fast Fourier transforms;Least squares approximations;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Haley_sdr_asrp_winncomm">2</a>]
+[<a name="Haley_sdr_asrp_winncomm">3</a>]
 </td>
 <td class="bibtexitem">
 David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Marc
@@ -56,12 +73,12 @@ David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Ma
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Kodithuwakku_tcomms_2014">3</a>]
+[<a name="Kodithuwakku_tcomms_2014">4</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
  Decoder-assisted timing synchronization in multiuser CDMA systems.
- 62(5):2061-2071, Jun. 2014.
+ <em>IEEE Trans. Commun.</em>, 62(5):2061-2071, Jun. 2014.
 [&nbsp;<a href="robby_bib.html#Kodithuwakku_tcomms_2014">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/TCOMM.2014.2316265">DOI</a>&nbsp;]
 
@@ -71,7 +88,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_mckilliam_crb_cpm_2013">4</a>]
+[<a name="Pollok_mckilliam_crb_cpm_2013">5</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -90,7 +107,7 @@ Keywords: Accuracy;Estimation;Modulation;Noise;Polynomials;Satellites;Vectors;Co
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6510040">5</a>]
+[<a name="6510040">6</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -109,7 +126,7 @@ Keywords: Monte Carlo methods;code division multiple access;decoding;interferenc
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="asrp_multiacess_world_patent">6</a>]
+[<a name="asrp_multiacess_world_patent">7</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, D.&nbsp;Haley, R.&nbsp;G. McKilliam, W.&nbsp;G. Cowley, and T.&nbsp;Chan.
@@ -123,7 +140,7 @@ A.&nbsp;Grant, D.&nbsp;Haley, R.&nbsp;G. McKilliam, W.&nbsp;G. Cowley, and T.&nb
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="asrp_comm_sys_and_method_world_patent">7</a>]
+[<a name="asrp_comm_sys_and_method_world_patent">8</a>]
 </td>
 <td class="bibtexitem">
 D.&nbsp;Haley, J.&nbsp;Buetefuer, A.&nbsp;Grant, W.&nbsp;Cowley, G.&nbsp;Lechner, I.&nbsp;R. Land, R.&nbsp;G.
@@ -138,7 +155,7 @@ D.&nbsp;Haley, J.&nbsp;Buetefuer, A.&nbsp;Grant, W.&nbsp;Cowley, G.&nbsp;Lechner
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="asrp_channel_allocation_world_patent">8</a>]
+[<a name="asrp_channel_allocation_world_patent">9</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, D.&nbsp;Haley, D.&nbsp;Lawrie, R.&nbsp;G. McKilliam, W.&nbsp;Cowley, and L.&nbsp;M. Davis.
@@ -152,7 +169,7 @@ A.&nbsp;Grant, D.&nbsp;Haley, D.&nbsp;Lawrie, R.&nbsp;G. McKilliam, W.&nbsp;Cowl
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_2012">9</a>]
+[<a name="McKilliam_asrp_phase_2012">10</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechner, I.&nbsp;Land, R.&nbsp;G.
@@ -167,7 +184,7 @@ A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechne
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_patent_2012">10</a>]
+[<a name="McKilliam_asrp_phase_patent_2012">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
@@ -182,7 +199,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_closest_point_lattice_first_kind_2014">11</a>]
+[<a name="McKilliam_closest_point_lattice_first_kind_2014">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam, A.&nbsp;Grant, and I.&nbsp;Clarkson.
@@ -190,13 +207,14 @@ R.&nbsp;McKilliam, A.&nbsp;Grant, and I.&nbsp;Clarkson.
  <em>SIAM Journal on Discrete Mathematics</em>, 28(3):1405-1422, 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1137/140952806">DOI</a>&nbsp;]
+
 </td>
 </tr>
 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_McKilliam_crb_cpm_2014">12</a>]
+[<a name="Pollok_McKilliam_crb_cpm_2014">13</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -211,7 +229,7 @@ A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_Pollock_CRB_polyphase_2013">13</a>]
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam and A.&nbsp;Pollok.
@@ -226,7 +244,7 @@ R.&nbsp;McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">14</a>]
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -241,7 +259,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">15</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
@@ -256,7 +274,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_time_offset_pilots_data_2013">16</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and W.&nbsp;Cowley.
@@ -275,7 +293,7 @@ Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Sign
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">17</a>]
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -294,7 +312,7 @@ Keywords: Noncoherent detection;asymptotic statistics;phase shift keying
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_multiple_sparse_noisy_SSP_2014">18</a>]
+[<a name="Quinn_multiple_sparse_noisy_SSP_2014">19</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -311,7 +329,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">19</a>]
+[<a name="Quinn_sparse_noisy_SSP_2012">20</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -327,7 +345,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">20</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -346,11 +364,11 @@ Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;po
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">21</a>]
+[<a name="McKilliam_error_prob_An2012">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
- On the error performance of the <em>a</em><sub>n</sub> lattices.
+ On the error performance of the <em>A</em><sub>n</sub> lattices.
  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.
 [&nbsp;<a href="robby_bib.html#McKilliam_error_prob_An2012">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/TIT.2012.2199462">DOI</a>&nbsp;]
@@ -361,7 +379,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">22</a>]
+[<a name="McKilliam_direstcro_dasp_2011">23</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -375,7 +393,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">23</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">24</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -392,7 +410,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">24</a>]
+[<a name="McKilliam2007">25</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -408,7 +426,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">25</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">26</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -424,7 +442,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">26</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">27</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -439,7 +457,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">27</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">28</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -455,7 +473,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6363913">28</a>]
+[<a name="6363913">29</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -475,7 +493,7 @@ Keywords: Monte Carlo methods;channel coding;code division multiple access;inter
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn20013asilomar_period_est">29</a>]
+[<a name="Quinn20013asilomar_period_est">30</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -491,7 +509,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">30</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">31</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -506,7 +524,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">31</a>]
+[<a name="McKilliam2006">32</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -521,7 +539,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">32</a>]
+[<a name="McKilliam2008">33</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -537,7 +555,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">33</a>]
+[<a name="McKilliam2008b">34</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -553,7 +571,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">34</a>]
+[<a name="McKilliam2008a">35</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -570,7 +588,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">35</a>]
+[<a name="McKilliam2009CoxeterLattices">36</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -588,7 +606,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">36</a>]
+[<a name="McKilliam2010thesis">37</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -603,7 +621,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">37</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">38</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -624,7 +642,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">38</a>]
+[<a name="Quinn2008maximizing_the_periodogram">39</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -642,7 +660,7 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_pps_unwrapping_tsp_2014">39</a>]
+[<a name="McKilliam_pps_unwrapping_tsp_2014">40</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
@@ -660,7 +678,7 @@ Keywords: Lattices;Least squares approximations;Phase estimation;Polynomials;Sig
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">40</a>]
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">41</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
