--- a/robby_bib.html
+++ b/robby_bib.html
@@ -17,6 +17,17 @@
 @comment{{Command line: /usr/bin/bib2bib -oc robbycites -ob robby.bib -c author:"McKilliam" bib.bib}}
 </pre>
 
+<a name="Haley_gns_4spaper2014"></a><pre>
+@inproceedings{<a href="robby.html#Haley_gns_4spaper2014">Haley_gns_4spaper2014</a>,
+  author = {D. Haley and A. Grant and W. Cowley and L. Davis and I. Land and M. Lavenant and G. Lechner and R. McKilliam and A. Pollok},
+  title = {Enabling Technologies for a Microsatellite-Based Global Sensor Network},
+  booktitle = {Small Satellites Systems and Services Symposium},
+  month = {May},
+  year = 2014,
+  address = {Majorca, Spain}
+}
+</pre>
+
 <a name="McKilliam_fast_sparse_period_est_2014"></a><pre>
 @article{<a href="robby.html#McKilliam_fast_sparse_period_est_2014">McKilliam_fast_sparse_period_est_2014</a>,
   author = {McKilliam, R.G. and Clarkson, I. V.L. and Quinn, B.G.},
@@ -45,7 +56,7 @@
 <a name="Kodithuwakku_tcomms_2014"></a><pre>
 @article{<a href="robby.html#Kodithuwakku_tcomms_2014">Kodithuwakku_tcomms_2014</a>,
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
-  journal = <a href="#ieeetom">ieeetom</a>,
+  journal = {IEEE Trans. Commun.},
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
   volume = 62,
   number = 5,
@@ -267,7 +278,7 @@
 @article{<a href="robby.html#McKilliam_error_prob_An2012">McKilliam_error_prob_An2012</a>,
   author = {R. G. McKilliam and R. Subramanian and E. Viterbo and I. V. L. Clarkson},
   journal = {IEEE Trans. Inform. Theory},
-  title = {On the Error Performance of the $A_{n}$ Lattices},
+  title = {On the Error Performance of the {$A_{n}$} Lattices},
   year = 2012,
   month = {Sep.},
   volume = 58,
