--- a/robby.html
+++ b/robby.html
@@ -20,7 +20,39 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Haley_gns_4spaper2014">1</a>]
+[<a name="Akhlaqbasisconstruction2015">1</a>]
+</td>
+<td class="bibtexitem">
+A.&nbsp;Akhlaq, R.G. McKilliam, and R.&nbsp;Subramanian.
+ Basis construction for range estimation by phase unwrapping.
+ <em>IEEE Signal Process. Letters</em>, 22(11):2152-2156, Nov 2015.
+[&nbsp;<a href="robby_bib.html#Akhlaqbasisconstruction2015">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/LSP.2015.2465153">DOI</a>&nbsp;]
+<blockquote><font size="-1">
+Keywords: Estimation;Lattices;Least squares approximations;Receivers;Signal processing algorithms;Wavelength measurement;Zinc;Closest lattice point;phase unwrapping;range estimation
+</font></blockquote>
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Akhlaq_basis_construction_range_est_2015">2</a>]
+</td>
+<td class="bibtexitem">
+Assad Akhlaq, R.&nbsp;G. McKilliam, and R.&nbsp;Subramanian.
+ Basis construction for range estimation by phase unwrapping.
+ submitted to IEEE Signal Processing Letters, Jun. 2015.
+[&nbsp;<a href="robby_bib.html#Akhlaq_basis_construction_range_est_2015">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Haley_gns_4spaper2014">3</a>]
 </td>
 <td class="bibtexitem">
 D.&nbsp;Haley, A.&nbsp;Grant, W.&nbsp;Cowley, L.&nbsp;Davis, I.&nbsp;Land, M.&nbsp;Lavenant, G.&nbsp;Lechner,
@@ -37,7 +69,7 @@ D.&nbsp;Haley, A.&nbsp;Grant, W.&nbsp;Cowley, L.&nbsp;Davis, I.&nbsp;Land, M.&nb
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_fast_sparse_period_est_2014">2</a>]
+[<a name="McKilliam_fast_sparse_period_est_2014">4</a>]
 </td>
 <td class="bibtexitem">
 R.G. McKilliam, I.&nbsp;V.L. Clarkson, and B.G. Quinn.
@@ -55,7 +87,7 @@ Keywords: Chirp;Estimation;Fast Fourier transforms;Least squares approximations;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Haley_sdr_asrp_winncomm">3</a>]
+[<a name="Haley_sdr_asrp_winncomm">5</a>]
 </td>
 <td class="bibtexitem">
 David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Marc
@@ -73,7 +105,7 @@ David Haley, Linda&nbsp;M. Davis, Andre Pollok, Ying Chen, Gottfried Lechner, Ma
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Kodithuwakku_tcomms_2014">4</a>]
+[<a name="Kodithuwakku_tcomms_2014">6</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
@@ -88,7 +120,7 @@ J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, R.&nbsp;G. McKilliam, and A.&nbsp;Grant.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_mckilliam_crb_cpm_2013">5</a>]
+[<a name="Pollok_mckilliam_crb_cpm_2013">7</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -107,7 +139,7 @@ Keywords: Accuracy;Estimation;Modulation;Noise;Polynomials;Satellites;Vectors;Co
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6510040">6</a>]
+[<a name="6510040">8</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -126,7 +158,7 @@ Keywords: Monte Carlo methods;code division multiple access;decoding;interferenc
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="asrp_multiacess_world_patent">7</a>]
+[<a name="asrp_multiacess_world_patent">9</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, D.&nbsp;Haley, R.&nbsp;G. McKilliam, W.&nbsp;G. Cowley, and T.&nbsp;Chan.
@@ -140,7 +172,7 @@ A.&nbsp;Grant, D.&nbsp;Haley, R.&nbsp;G. McKilliam, W.&nbsp;G. Cowley, and T.&nb
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="asrp_comm_sys_and_method_world_patent">8</a>]
+[<a name="asrp_comm_sys_and_method_world_patent">10</a>]
 </td>
 <td class="bibtexitem">
 D.&nbsp;Haley, J.&nbsp;Buetefuer, A.&nbsp;Grant, W.&nbsp;Cowley, G.&nbsp;Lechner, I.&nbsp;R. Land, R.&nbsp;G.
@@ -155,7 +187,7 @@ D.&nbsp;Haley, J.&nbsp;Buetefuer, A.&nbsp;Grant, W.&nbsp;Cowley, G.&nbsp;Lechner
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="asrp_channel_allocation_world_patent">9</a>]
+[<a name="asrp_channel_allocation_world_patent">11</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, D.&nbsp;Haley, D.&nbsp;Lawrie, R.&nbsp;G. McKilliam, W.&nbsp;Cowley, and L.&nbsp;M. Davis.
@@ -169,7 +201,7 @@ A.&nbsp;Grant, D.&nbsp;Haley, D.&nbsp;Lawrie, R.&nbsp;G. McKilliam, W.&nbsp;Cowl
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_2012">10</a>]
+[<a name="McKilliam_asrp_phase_2012">12</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechner, I.&nbsp;Land, R.&nbsp;G.
@@ -184,7 +216,7 @@ A.&nbsp;Grant, B.&nbsp;Cowley, D.&nbsp;Haley, A.&nbsp;Barbulescu, G.&nbsp;Lechne
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_asrp_phase_patent_2012">11</a>]
+[<a name="McKilliam_asrp_phase_patent_2012">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
@@ -199,10 +231,10 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and B.&nbsp;Cowley.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_closest_point_lattice_first_kind_2014">12</a>]
+[<a name="McKilliam_closest_point_lattice_first_kind_2014">14</a>]
 </td>
 <td class="bibtexitem">
-R.&nbsp;McKilliam, A.&nbsp;Grant, and I.&nbsp;Clarkson.
+R.&nbsp;G. McKilliam, A.&nbsp;Grant, and I.&nbsp;V.&nbsp;L. Clarkson.
  Finding a closest point in a lattice of Voronoi's first kind.
  <em>SIAM Journal on Discrete Mathematics</em>, 28(3):1405-1422, 2014.
 [&nbsp;<a href="robby_bib.html#McKilliam_closest_point_lattice_first_kind_2014">bib</a>&nbsp;| 
@@ -214,7 +246,22 @@ R.&nbsp;McKilliam, A.&nbsp;Grant, and I.&nbsp;Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Pollok_McKilliam_crb_cpm_2014">13</a>]
+[<a name="McKilliam_range_est_lattice_basis_2015">15</a>]
+</td>
+<td class="bibtexitem">
+A.&nbsp;Akhlaq, R.&nbsp;G. McKilliam, and R.&nbsp;Subramanian.
+ Basis construction for range estimation by phase unwrapping.
+ submitted to IEEE Signal Processing Letters, Feb. 2015.
+[&nbsp;<a href="robby_bib.html#McKilliam_range_est_lattice_basis_2015">bib</a>&nbsp;| 
+<a href="http://www.itr.unisa.edu.au/~mckillrg/papers/basis_construction.pdf">.pdf</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Pollok_McKilliam_crb_cpm_2014">16</a>]
 </td>
 <td class="bibtexitem">
 A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
@@ -229,7 +276,7 @@ A.&nbsp;Pollok and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_Pollock_CRB_polyphase_2013">14</a>]
+[<a name="McKilliam_Pollock_CRB_polyphase_2013">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;McKilliam and A.&nbsp;Pollok.
@@ -244,7 +291,7 @@ R.&nbsp;McKilliam and A.&nbsp;Pollok.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_mean_dir_est_sq_arc_length2010">15</a>]
+[<a name="McKilliam_mean_dir_est_sq_arc_length2010">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -259,7 +306,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKpilotsdata_2012">16</a>]
+[<a name="McKilliam_leastsqPSKpilotsdata_2012">19</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&nbsp;Quinn.
@@ -274,7 +321,7 @@ R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, V.&nbsp;Clarkson, and B.&n
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_time_offset_pilots_data_2013">17</a>]
+[<a name="McKilliam_time_offset_pilots_data_2013">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, and W.&nbsp;Cowley.
@@ -293,7 +340,7 @@ Keywords: Complexity theory;Linear programming;Phase shift keying;Receivers;Sign
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">18</a>]
+[<a name="McKilliam_leastsqPSKnoncoICASSP_2012">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, A.&nbsp;Pollok, B.&nbsp;Cowley, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -312,7 +359,7 @@ Keywords: Noncoherent detection;asymptotic statistics;phase shift keying
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_multiple_sparse_noisy_SSP_2014">19</a>]
+[<a name="Quinn_multiple_sparse_noisy_SSP_2014">22</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -329,7 +376,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn_sparse_noisy_SSP_2012">20</a>]
+[<a name="Quinn_sparse_noisy_SSP_2012">23</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -345,7 +392,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">21</a>]
+[<a name="McKilliam_short_vectors_first_type_isit_2012">24</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -364,7 +411,7 @@ Keywords: Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;po
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_error_prob_An2012">22</a>]
+[<a name="McKilliam_error_prob_An2012">25</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -379,7 +426,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_direstcro_dasp_2011">23</a>]
+[<a name="McKilliam_direstcro_dasp_2011">26</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -393,7 +440,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">24</a>]
+[<a name="McKilliam_polyphase_est_icassp_2011">27</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -410,7 +457,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">25</a>]
+[<a name="McKilliam2007">28</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -426,7 +473,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">26</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">29</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -442,7 +489,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">27</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">30</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -457,7 +504,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">28</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">31</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -473,7 +520,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="6363913">29</a>]
+[<a name="6363913">32</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;Letzepis, A.&nbsp;Grant, and R.&nbsp;McKilliam.
@@ -493,15 +540,16 @@ Keywords: Monte Carlo methods;channel coding;code division multiple access;inter
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn20013asilomar_period_est">30</a>]
+[<a name="Quinn20013asilomar_period_est">33</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
  On the periodogram estimator of period from sparse, noisy timing
   data.
  In <em>Asilomar Conference on Signals, Systems, and Computers</em>,
-  2013.
-[&nbsp;<a href="robby_bib.html#Quinn20013asilomar_period_est">bib</a>&nbsp;]
+  pages 879-883, Nov 2013.
+[&nbsp;<a href="robby_bib.html#Quinn20013asilomar_period_est">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1109/ACSSC.2013.6810414">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -509,7 +557,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">31</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">34</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -524,7 +572,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">32</a>]
+[<a name="McKilliam2006">35</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -539,7 +587,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">33</a>]
+[<a name="McKilliam2008">36</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -555,7 +603,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">34</a>]
+[<a name="McKilliam2008b">37</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -571,7 +619,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">35</a>]
+[<a name="McKilliam2008a">38</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -588,7 +636,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">36</a>]
+[<a name="McKilliam2009CoxeterLattices">39</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -606,7 +654,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">37</a>]
+[<a name="McKilliam2010thesis">40</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -621,7 +669,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">38</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">41</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -642,7 +690,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">39</a>]
+[<a name="Quinn2008maximizing_the_periodogram">42</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -660,7 +708,7 @@ Keywords: Newton method, fast Fourier transforms, frequency estimation, FFT, New
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_pps_unwrapping_tsp_2014">40</a>]
+[<a name="McKilliam_pps_unwrapping_tsp_2014">43</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
@@ -678,7 +726,7 @@ Keywords: Lattices;Least squares approximations;Phase estimation;Polynomials;Sig
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_arxiv_pps_unwrapping_2012">41</a>]
+[<a name="McKilliam_arxiv_pps_unwrapping_2012">44</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;N. Vellambi.
