--- a/robby_bib.html
+++ b/robby_bib.html
@@ -17,6 +17,32 @@
 @comment{{Command line: /usr/bin/bib2bib -oc robbycites -ob robby.bib -c author:"McKilliam" bib.bib}}
 </pre>
 
+<a name="Akhlaqbasisconstruction2015"></a><pre>
+@article{<a href="robby.html#Akhlaqbasisconstruction2015">Akhlaqbasisconstruction2015</a>,
+  author = {Akhlaq, A. and McKilliam, R.G. and Subramanian, R.},
+  journal = {IEEE Signal Process. Letters},
+  title = {Basis Construction for Range Estimation by Phase Unwrapping},
+  year = 2015,
+  month = {Nov},
+  volume = 22,
+  number = 11,
+  pages = {2152-2156},
+  keywords = {Estimation;Lattices;Least squares approximations;Receivers;Signal processing algorithms;Wavelength measurement;Zinc;Closest lattice point;phase unwrapping;range estimation},
+  doi = {10.1109/LSP.2015.2465153},
+  issn = {1070-9908}
+}
+</pre>
+
+<a name="Akhlaq_basis_construction_range_est_2015"></a><pre>
+@unpublished{<a href="robby.html#Akhlaq_basis_construction_range_est_2015">Akhlaq_basis_construction_range_est_2015</a>,
+  title = {Basis construction for range estimation by phase unwrapping},
+  author = {Assad Akhlaq and R.~G.~McKilliam and R. Subramanian},
+  note = {submitted to IEEE Signal Processing Letters},
+  year = 2015,
+  month = {Jun.}
+}
+</pre>
+
 <a name="Haley_gns_4spaper2014"></a><pre>
 @inproceedings{<a href="robby.html#Haley_gns_4spaper2014">Haley_gns_4spaper2014</a>,
   author = {D. Haley and A. Grant and W. Cowley and L. Davis and I. Land and M. Lavenant and G. Lechner and R. McKilliam and A. Pollok},
@@ -144,7 +170,7 @@
 
 <a name="McKilliam_closest_point_lattice_first_kind_2014"></a><pre>
 @article{<a href="robby.html#McKilliam_closest_point_lattice_first_kind_2014">McKilliam_closest_point_lattice_first_kind_2014</a>,
-  author = {McKilliam, R. and Grant, A. and Clarkson, I.},
+  author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
   title = {Finding a Closest Point in a Lattice of {Voronoi's} First Kind},
   journal = {{SIAM} Journal on Discrete Mathematics},
   volume = 28,
@@ -152,6 +178,17 @@
   pages = {1405-1422},
   year = 2014,
   doi = {10.1137/140952806}
+}
+</pre>
+
+<a name="McKilliam_range_est_lattice_basis_2015"></a><pre>
+@unpublished{<a href="robby.html#McKilliam_range_est_lattice_basis_2015">McKilliam_range_est_lattice_basis_2015</a>,
+  author = {A. Akhlaq and R. G. McKilliam and R. Subramanian},
+  title = {Basis construction for range estimation by phase unwrapping},
+  note = {submitted to IEEE Signal Processing Letters},
+  year = 2015,
+  month = {Feb.},
+  url = {<a href="http://www.itr.unisa.edu.au/~mckillrg/papers/basis_construction.pdf">http://www.itr.unisa.edu.au/~mckillrg/papers/basis_construction.pdf</a>}
 }
 </pre>
 
@@ -385,7 +422,10 @@
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
   booktitle = {Asilomar Conference on Signals, Systems, and Computers},
-  year = 2013
+  year = 2013,
+  month = {Nov},
+  pages = {879--883},
+  doi = {10.1109/ACSSC.2013.6810414}
 }
 </pre>
 
